--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "request-header-parser-microservice",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {},
   "author": "Nicholas Mason <nmt.mason@googlemail.com>",
   "license": "MIT",
