--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "src/index.js",
   "repository": {},
   "author": "Nicholas Mason <nmt.mason@googlemail.com>",
-  "license": "MIT",
+  "license": "ISC",
+  "scripts": {
+    "start": "node index.js",
+    "watch": "nodemon index.js"
+  },
+  "engines": {
+    "node": "10.x.x"
+  },
   "dependencies": {
     "express": "^4.14.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "watch": "nodemon index.js"
   }
 }
