Update file path for start scripts

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Nicholas Mason <nmt.mason@googlemail.com>",
   "license": "ISC",
   "scripts": {
-    "start": "node index.js",
-    "watch": "nodemon index.js"
+    "start": "node src/index.js",
+    "watch": "nodemon src/index.js"
   },
   "engines": {
     "node": "10.x.x"
